# ai_dev_tools_hack_2025

./: .gitignore  Cube_10.0mm.FCStd  IMPLEMENTATION_SUMMARY.md  README.md  README_FIXES.md  ROBOT_ASSEMBLY_GUIDE.md  ai_agent.py  cad_client.py  common_logic.py  debug_assembly.py  debug_test.py  deep_debug.py  demo_robot_assembly.py  docker-compose.yml  final_test.py  gui.py  main.py  mcp_instance.py  mcp_server.py  mcp_settings.json  requirements.txt  run_all.py  server.py  server_test.py  settings_mcp.json  simple_test.py  test_assembly.py  test_backend.py  test_diagnostic.py  test_fixed_assembly.py  test_fixed_function.py  test_sketch_endpoint.py  tg_bot.py
agent/: agent.py
ai_agent/: agent.py  test_agent.py
app/: main.py  requirements.txt
buisness_agent/: agent.py  dockerfile  pyproject.toml
docs/: create_rectangle_sketch_tool.md
mcp_server/: .env  dockerfile  env_options.json  mcp-server-catalog.yaml  mcp_server.py  mcp_tools.json  metrics.py  pyproject.toml  server.py
mcp_server/test/: test_tools.py
mcp_server/tools/: company_info.py  financial_analysis.py  market_data.py  utils.py
tools/: __init__.py  cad_systems_info.py  create_cube.py  create_cylinder.py  create_shape.py  create_sphere.py  documents.py  get_documents.py  get_mcp_status.py  list_blender_objects.py  list_cad_documents.py  shapes.py  tool_add_part_to_assembly.py  tool_apply_constraint.py  tool_assemble_robot.py  tool_create_assembly.py  tool_create_cube.py  tool_create_cylinder.py  tool_create_shape.py  tool_create_shapes.py  tool_create_sketch.py  tool_create_sphere.py  tools_name.py  (+7 more)
(+17 files in other folders)
